# nodejs-mobile-samples

android/native-gradle/: .gitignore
android/native-gradle-node-folder/: build.gradle  settings.gradle
android/native-gradle-node-folder/app/: .gitignore  build.gradle
android/native-gradle-node-folder/app/src/main/: AndroidManifest.xml
android/native-gradle-node-folder/app/src/main/assets/nodejs-project/: function-call.node  main.js
android/native-gradle-node-folder/gradle/wrapper/: gradle-wrapper.properties
android/native-gradle-node-folder/nativeLib/: CMakeLists.txt  build.gradle  copyLibs.sh
android/native-gradle-node-folder/nativeLib/src/androidTest/java/com/example/nativelib/: ExampleInstrumentedTest.java
android/native-gradle-node-folder/nativeLib/src/main/: AndroidManifest.xml
android/native-gradle-node-folder/nativeLib/src/main/cpp/: CMakeLists.txt  SayWorker.cpp  SayWorker.h  binding.cpp
android/native-gradle-node-folder/nativeLib/src/main/cpp/cmake-js/: CMakeLists.txt
android/native-gradle/app/: .gitignore  build.gradle
android/native-gradle/gradle/wrapper/: gradle-wrapper.properties
fn-call/: binding.cpp  fn-call.cmake
fn-call/cmake-js/: CMakeLists.txt
